<?xml version="1.0"?>
<package format="2">
  <name>planning_mfr</name>
  <version>1.0.0</version>
  <description>The decision_planning package</description>
  <maintainer email="lujunhui@momenta.ai">lujunhui</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>

  <depend>momenta_utils</depend>
  <depend>common_thirdparty</depend>
  
  <depend>momenta_mfrmsgs</depend>
  <depend>generate_mfr_cpp_struct</depend>
  <depend>generate_ros_mfr</depend>
</package>
